--- a/games.html
+++ b/games.html
@@ -22,6 +22,7 @@
                     <a class="dropdown-item"  href="index.html#unity">Unity</a>
                     <a class="dropdown-item" href="index.html#unreal">Unreal</a>
                     <a class="dropdown-item"  href="index.html#godot">Godot</a>
+                    <a class="dropdown-item"  href="index.html#personal">Personal</a>
                 </div>
             </div>
             <a class="bar-item bar-padding bar-hover" href="nongames.html">Non-Games</a>
@@ -234,6 +235,210 @@
                         <div>
                             <h3>See More:</h3>
                             <h4>Code snippets coming soon! (Awaiting permission)</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="personal" class="content-subsection">
+                <h1 >Personal Projects</h1>
+                <div class="personal-desc">
+                    <h3>
+                        These projects are all unpaid, hobby projects I built during my free-time. Most projects shown here are prototypes or proof-of-concept, meaning many did not see full release (almost always due to my own inability to create the necessary art). These 
+                        projects are at varying levels of complete-ness, ranging from quickly thrown together explorations of a design, to months long dives into a concept I fell in love with. Unfortunately, not every project has been preserved, so some items listed here only 
+                        have small videos containing glimpses of what I built, while others have their complete source-code, which you are more than welcome to peruse!
+                    </h3>
+                </div>
+                <div class="content-preview content-left">
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <iframe id="media-left" width="560" height="315" src="https://www.youtube.com/embed/xP4swyK86xs?si=1wJhcOiIcOZsglXN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <h2 class="project-name">Dota 2: VR</h2>
+                            <h3 class="project-company">2019</h3>
+                            <h4 class="project-role">Proof of Concept</h4>
+                        </div>
+                        <p class="content-description">This project served as my capstone for my degree at Michigan State University. It as an attempt to translate one of my all-time favorite games, Dota 2, to a VR environment. The project features a 
+                            fully functioning Pudge Hook (which is of course the most fun skill in all of Dota), responsive enemy AI, dynamic HUD, contact based combat system, audio reactions, and a VR inventory system. This project was created with the explicit permission from Gabe Newell himself!
+                            </p>
+                    </div>
+                    <button type="button" class="content-button content-button-right">
+                        <img src="resources\images\chevron-right.svg" />
+                    </button>
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>October 2019 - December 2019</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>Ported all visuals directly from the Source 1 build of Dota 2, using a pipeline involving Blender and community built tools for extracting textures and models from Source engine games. Built using the Unity Engine, and tested on a 
+                                Valve Index. All aspects of this project were created by me, including ability and combat functions.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unity</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <h4>Unfortunately, only this youtube video has survived the test of time.</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content-preview content-right">
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>January 2020 - June 2021</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>Born directly from my own love of movement based shooters, I set out to prove that high-motion games can absolutely work in a VR enviornment. I spent a majority of this time nailing down the mechanics behind climbing and swining, which 
+                                felt integral to the success of a movement based VR game. Bunnyhopping concpets were taken from the Titanfall series, where sliding and jumping allow the player to preserve their speed. All mechanics and visuals present in this game were built by me. 
+                                Unfortunately, like many of my projects, it did not see a release as I was unable to find an artist or create my own art.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unity</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <h4>Unfortunately, only this youtube video has survived the test of time.</h4>
+                        </div>
+                    </div>
+                    <button type="button" class="content-button  content-button-left">
+                        <img src="resources\images\chevron-left.svg" />
+                    </button>
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <iframe id="media-right" width="560" height="315" src="https://www.youtube.com/embed/Q-aOpw3-vfA?si=icE5scxFL49L9GiT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <h2 class="project-name">Phase Shift</h2>
+                            <h3 class="project-company">2020-2021</h3>
+                            <h4 class="project-role">Full Mechanical Prototype</h4>
+                        </div>
+                        <p>This VR project was built to test the limitations of motion in VR. This project centered around the concepts of player motion that feel the most fun to play with in flat-screen, first-person games--grappling hooks and bunnyhopping. It features 
+                            a fully fleshed out system for climbing, swinging, jumping, and combat. It was iterated on several times, many of which featured a combination of hand-held daggers, which could be thrown and teleported to while in motion. Ultimately, the final concept 
+                            revolved around empty hands, which would enable the user to interact more easily with the objects in their environment.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="content-preview content-left">
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <iframe id="media-left" width="560" height="315" src="https://www.youtube.com/embed/5lgau2OfnlY?si=HCL9N4nO9rOW3fcP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <h2 class="project-name">First Person Football League (FPFL)</h2>
+                            <h3 class="project-company">2020 - 2021</h3>
+                            <h4 class="project-role">Proof of Concept</h4>
+                        </div>
+                        <p class="content-description">First Person Football League was a proof of concept game, used to explore the idea of an arcade-style American Football game, played entirely from the first-person perspective. This game featured AI receivers, whose routes were 
+                            chosen by the user during the pre-play phase, and would be run using simple pathfinding. Players could throw the football at varying angles with varied power, by holding the left-mouse button for a range of time. This game featured a basic multiplayer 
+                            implementation, allowing users to directly connect to one another to play head-to-head. 
+                        </p>
+                    </div>
+                    <button type="button" class="content-button content-button-right">
+                        <img src="resources\images\chevron-right.svg" />
+                    </button>
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>June 2020 - January 2021</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>This project was largely inspired by the Counter-Strike 1.6 gameplay mod, known as American Football Mod. It borrows the throwing mechanic and movement types seen present in this mod. All systems present here were built by me, and multiplayer systems were 
+                                tested by myself and a close friend. Gameplay was fun, however due to art limitations and a lack of time, this project did not make it far past the prototyping phase. I have revisited this concept a number of times, and still believe this concept of first-person 
+                                football could be quite popular!
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unity</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <h4>Unfortunately, only this youtube video has survived the test of time.</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content-preview content-right">
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>March 2022 - September 2022</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>I am an avid enjoyer of both watching and performing Half-Life speedruns, so this project was an oppurtinity to pour my love for the game into my own concept. The movement code is derived from Half-Lifes air-strafing mechanics, which center around a quirk 
+                                with vector projections. I built these systems to feel as close as possible to the real thing, and even borrowed some other concepts from other Valve titles (who doesnt love the Force-A-Nature?). I would love to see this concept fleshed out into a fully developed game, though for 
+                                commercial release, it would likely need to be more detached from the existing movement systems in Half-Life.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unity</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <a href="https://github.com/jphill97/PortfolioSnippets/tree/main/FPSPlatformer"><h4>View the Source Code</h4></a>
+                        </div>
+                    </div>
+                    <button type="button" class="content-button  content-button-left">
+                        <img src="resources\images\chevron-left.svg" />
+                    </button>
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <iframe id="media-right" width="560" height="315" src="https://www.youtube.com/embed/YAet1pH2TBk?si=ba0Mzfx7hFhp-66L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <h2 class="project-name">FPS Platformer</h2>
+                            <h3 class="project-company">2023</h3>
+                            <h4 class="project-role">Mechanical Prototype</h4>
+                        </div>
+                        <p class="content-description">The FPS Platformer is a concept born from the Half-Life speedrun community, where Bunnyhopping is the through-line for the entire speedrun. Bunnyhopping in this project is directly derived from the 
+                            movement systems in Half-Life 1, where air-strafing allows for player acceleration, and only frames spent on the ground will slow the player down. This game is built on top of the Unity FPS sample project, and centered around maps featuring small platforms, which the player must bunnyhop between 
+                            to maintain their momentum and clear gaps. A finished version of this prototype would feature common 3D platformer tropes, including hidden gems, platforming based enemies, and speed-trials. It also centered around weapons which could assist the player both 
+                            in combat and navigating tight platforming sections.
+                        </p>
+                    </div>
+                </div>
+            
+                <div class="content-preview content-left">
+                    <div class="content-wrapper content-base">
+                        <div class="center-content">
+                            <iframe id="media-left" width="560" height="315" src="https://www.youtube.com/embed/tMbD_6VZDdY?si=NuZJi4r0863r4vMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <h2 class="project-name">Wintermaul</h2>
+                            <h3 class="project-company">2023-2024</h3>
+                            <h4 class="project-role">Proof of Concept</h4>
+                        </div>
+                        <p class="content-description">Wintermaul is a modern adaptation of the classic Warcraft 3 custom-game by the same name. It is a co-op tower defense game, in which the player builds towers directly in the path of the creep hordes, forcing these 
+                            creeps to navigate the towers, meaning the structure by which towers are placed directly contributes to the success of your build. This game currently features a grid based consturction system, dynamic AI navigation, and a dynamic tower inventory. It 
+                            will eventually feature rogue-lite elements and complete multiplayer co-op!
+                        </p>
+                    </div>
+                    <button type="button" class="content-button content-button-right">
+                        <img src="resources\images\chevron-right.svg" />
+                    </button>
+                    <div class="content-wrapper content-slideout">
+                        <div>
+                            <h3>Involvement Timeline:</h3>
+                            <h4>November 2023 - Ongoing</h4>
+                        </div>
+                        <div>
+                            <h3>Job description:</h3>
+                            <p>Wintermaul was a favorite custom game of mine during my time playing Warcraft 3, and I was quite dissapointed to find that no-one had revisited the concept in the modern games era. I decided to jump at the oppurtinity, with hopes to release the game, in full, 
+                                at some point in the near future. This game is still very early in development, so a lot of major features are still missing, but my own love of the concept joined with my close friends love of Tower Defense games, has kept my motivation alive to continue pursuing this project. I 
+                                hope for it to become my first full-release!
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Technologies Utilized:</h3>
+                            <h4>Unity</h4>
+                        </div>
+                        <div>
+                            <h3>See More:</h3>
+                            <a href="https://github.com/jphill97/PortfolioSnippets/tree/main/Wintermaul"><h4>View the Source Code</h4></a>
                         </div>
                     </div>
                 </div>
