--- a/nongames.html
+++ b/nongames.html
@@ -23,6 +23,7 @@
                     <a class="dropdown-item"  href="index.html#unity">Unity</a>
                     <a class="dropdown-item" href="index.html#unreal">Unreal</a>
                     <a class="dropdown-item"  href="index.html#godot">Godot</a>
+                    <a class="dropdown-item"  href="index.html#personal">Personal</a>
                 </div>
             </div>
             <a class="bar-item bar-padding bar-hover" href="nongames.html">Non-Games</a>
